Sorta fixed resume button padding on mobile

--- a/app/_components/Header/Header.module.scss
+++ b/app/_components/Header/Header.module.scss
@@ -49,7 +49,7 @@
             cursor: auto;
         }
 
-        a {
+        a,div {
             padding: 0.5rem 1.5rem;
             display: flex;
             gap: 0.5rem;
